--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidX</string>
+    <string name="wifi_connection">Wifi connection</string>
+    <string name="mobile_connection">Mobile connection</string>
+    <string name="no_wifi_or_mobile">no wifi or mobile</string>
 </resources>
